--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "remove-console-msg",
-  "version": "1.0.5",
-  "description": "Removes all console.* lines from files.",
+  "version": "1.0.6",
+  "description": "Removes all console.* and debugger lines from files.",
   "main": "index.js",
   "bin": {
-    "make-them-go":"index.js"
+    "make-them-go": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
